[package]
name = "inst_derive"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive macro for tagged union enums implementing the Instantiable trait in safety-net"
repository = "https://github.com/jk2997/inst_derive"

[lib]
proc-macro = true

[dependencies]
safety-net = "0.3.0"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.111", features = ["full"] }